﻿i-MSCP ChangeLog
~~~~~~~~~~~~~~~~

------------------------------------------------------------------------------------------------------------------------
Git stable
------------------------------------------------------------------------------------------------------------------------

CONFIGS:
	- Allow usage of mod_rewrite even when PHP is disabled

ENGINE:
	- Fixed: DNS records (subdomains) are not deleted from zone files (bind9 server impl.)
	- Fixed: SOA Serial is not updated in zone files (bind9 server impl.)

GUI:
	- Added: Database transaction counter
	- Fixed: Stop propagation of the onAuthentication event on first successful authentication attempt

Tickets:
	Fixed: #0879: Security Issue - SQL user hostname - Remove wildcard
	Fixed: #1042: Bug - Serial and DNS records in zone files aren't updated/deleted
	Fixed: #1045: Bug - All customer alias DNS records are removed when a subdomain is being deleted

------------------------------------------------------------------------------------------------------------------------
1.1.3
------------------------------------------------------------------------------------------------------------------------

2014-03-11: Laurent Declercq
	- RELEASE i-MSCP 1.1.3

ADDONS:
	- Added: onLoadTemplate events
	- Removed: PasswordChanger install part (Roundcube). This plugin will be part of the RoundcubePlugins plugin
	- Updated: Net2ftp installer

ENGINE:
	- Added: Missing onLoadTemplate events

GUI:
	- Added: Disable custom DNS records feature in case of external DNS server usage

INSTALLER:
	- Added: External server option for DNS server
	- Fixed: Local resolver must be disabled in case of external DNS server usage
	- Fixed: When switching to external DNS server, uninstallation of current DNS server must be triggered

PLUGINS:
	- Added: iMSCP_Plugin::migrateDb() method which allow to migrate plugin database schema